HMAN-892 Sonar issues