@@ -3,7 +3,6 @@ package uk.gov.hmcts.reform.hmc.validator;
 import org.apache.commons.lang3.StringUtils;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import javax.validation.ConstraintValidator;
 import javax.validation.ConstraintValidatorContext;
@@ -16,9 +15,9 @@ public class ManageRequestStateEnumPatternValidator implements
     @Override
     public void initialize(ManageRequestStateEnumPattern annotation) {
         acceptedValues = Stream.of(annotation.enumClass().getEnumConstants())
-            .map(enumValue -> enumValue.name())
+            .map(Enum::name)
             .map(StringUtils::capitalize)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Override
